# Legal-Assistance-Chatbot

./: .gitignore  README.md
chatbot-api/: .env.template  Dockerfile  bkr.txt  docker-compose.yaml  pyproject.toml  requirements.txt
chatbot-api/src/: main.py
chatbot-api/src/agents/: agent.py  agent2.py  agent_old.py
chatbot-api/src/chains/: cypher_chain.py  judgement_vector_chain.py  law_vector_chain.py  qa_vector_chain.py
chatbot-api/src/models/: model.py
data/: neo4j.dump  ฎีกาผิดสัญญาเช่าซื้อรถยนต์ (TA ภูดาว).docx  ฎีกาเช่าซื้อกรณีรถยนต์สูญหาย ยึด คืนทรัพย.docx  ฎีกาเลิกสัญญาเช่าซื้อรถยนต์ TA บอส.docx  ผลการสกัดคำพิพากษาศาลฎีกา.xlsx
test/: async_agent_requests.py  sync_agent_requests.py  test-result.xlsx
