[tool.poetry]
package-mode = false
name = "chatbot-api"
version = "0.1.0"
description = "A backend chatbot for LINE, utilizing Python, FastAPI, LangChain, Azure AI, and Neo4j to provide legal assistance in cases related to Thailand's illegal acts regarding car leasing."
authors = [
    "Wasinee Thuai-Im <6410110479@email.psu.ac.th>",
    "Witayaporn Maliwan <6410110483@email.psu.ac.th>, <maliwan1754@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohappyeyeballs = "^2.4.4"
aiohttp = "^3.11.11"
aiosignal = "^1.3.2"
annotated-types = "^0.7.0"
anyio = "^4.7.0"
attrs = "^24.3.0"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.1"
click = "^8.1.8"
dataclasses-json = "^0.6.7"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
fastapi = "^0.115.6"
fastapi-cli = "^0.0.7"
filelock = "^3.16.1"
frozenlist = "^1.5.0"
fsspec = "^2024.12.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httptools = "^0.6.4"
httpx-sse = "^0.4.0"
huggingface-hub = "^0.27.0"
idna = "^3.10"
jinja2 = "^3.1.5"
joblib = "^1.4.2"
jsonpatch = "^1.33"
jsonpointer = "^3.0.0"
langchain = "^0.3.13"
langchain-azure-ai = "^0.1.2"
langchain-community = "^0.3.13"
langchain-core = "^0.3.28"
langchain-huggingface = "^0.1.2"
langchain-neo4j = "^0.2.0"
langchain-ollama = "^0.2.2"
langchain-text-splitters = "^0.3.4"
langsmith = "^0.2.7"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
marshmallow = "^3.23.2"
mdurl = "^0.1.2"
mpmath = "^1.3.0"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
neo4j = "^5.27.0"
networkx = "^3.4.2"
numpy = "^1.26.4"
orjson = "^3.10.13"
packaging = "^24.2"
pathlib = "^1.0.1"
pillow = "^11.0.0"
propcache = "^0.2.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
pydantic-core = "^2.27.2"
pygments = "^2.18.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
pytz = "^2024.2"
pyyaml = "^6.0.2"
regex = "^2024.11.6"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
rich = "^13.9.4"
rich-toolkit = "^0.12.0"
safetensors = "^0.4.5"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
sentence-transformers = "^3.3.1"
setuptools = "^75.6.0"
shellingham = "^1.5.4"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
tenacity = "^9.0.0"
threadpoolctl = "^3.5.0"
tokenizers = "^0.21.0"
torch = "^2.5.1"
tqdm = "^4.67.1"
transformers = "^4.47.1"
typer = "^0.15.1"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"
uvicorn = "^0.34.0"
uvloop = "^0.21.0"
watchfiles = "^1.0.3"
websockets = "^14.1"
yarl = "^1.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
